Create partial template and generate links

--- a/templates/hello/show_one.html.twig
+++ b/templates/hello/show_one.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
 <div>
-<b>{{ message }}</b>
+<b>{{ message.message }}</b>
+{{ include('hello/_message.html.twig',{message: message}) }}
 </div>
 {% endblock %}
