--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -4,12 +4,15 @@
 
 <div>
 {% if messages|length > 0 %}
-
-  {% for message in messages %}
-    <div>{{message}}</div>   
-  {% endfor %} {% else %}
-  <p>There's nothig here!</p>
-  {% endif %}
+  {% for key,message in messages|slice(0, limit) %}
+  <div>
+    <a href='{{path('app_Show_one', {id: key})}}'>{{message.message}}</a>   
+  </div>
+   {{ include('hello/_message.html.twig',{message: message}) }}
+  {% endfor %} 
+  {% else %}
+    <p>There's nothig here!</p>
+{% endif %}
 </div>
 {% endblock %}
 
