Style by tailwind

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="dark">
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
@@ -16,18 +16,50 @@
 {# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"> #}
          <script src="https://cdn.tailwindcss.com"></script>
          <script>
-         tailwind.config {
+         tailwind.config = {
             darkMode: 'class'
          }
          </script>
     </head>
     <body class="bg-gray-100 text-gray-800 m-10 dark:bg-gray-800 dark:text-white">
-    <h1> Hello Symfony </h1>
-   <div class="w-full md:w-2/3 mx-auto">
-   {% for message in app.flashes('success') %}
+        <div class="w-full md:w-2/3 mx-auto mb-4 flex justify-between items-center">
+            <div class="text-4xl">
+                <a href="{{ path('app_micro_post') }}">Home</a>
+                {% block bread %}
+
+                {% endblock %}
+            </div>
+
+            <div class="text-right">
+                <div class="text-sm text-gray-500 dark:text-gray-400 flex">
+                    
+                    <div>
+                        Add New
+                    </div>
+                    <div class="ml-2">
+                        Profile Settings
+                    </div>
+                    <div class="ml-2">
+                        Logout
+                    </div>
+                    
+                    <div>
+                        Login
+                    </div>
+                    <div class="ml-2">
+                        Register
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+
+        <div class="w-full md:w-2/3 mx-auto">
+        {% for message in app.flashes('success') %}
             <div class="rounded-md p-2 border-green-300 bg-green-50 border dark:border-green-600 dark:bg-green-700 dark:text-white mb-4">{{ message }}</div>
         {% endfor %}
-    </div>
-    {% block body %}{% endblock %}
+
+        {% block body %}{% endblock %}
+        </div>   
     </body>
 </html>
