--- a/templates/micro_post/_form.html.twig
+++ b/templates/micro_post/_form.html.twig
@@ -2,19 +2,19 @@
 {{ form_start(form) }}
 <div> {{ form_errors(form) }} </div>
 <div>
-{{form_label(form.title, 'Please enter title')}}
+{{form_label(form.title, 'Please enter title', {'label_attr': {'class': 'block text-sm text-gray-700 dark:text-gray-300 font-medium'}})}}
 </div>
 <div>
-{{form_widget(form.title)}}
+{{form_widget(form.title, {'attr': {'class': 'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p-2 mt-1 mb-2'}})}}
 </div>
 <div>
-{{form_label(form.text, 'Please enter text')}}
+{{form_label(form.text, 'Please enter text', {'label_attr': {'class': 'block text-sm text-gray-700 dark:text-gray-300 font-medium'}})}}
 </div>
 <div>
-{{form_widget(form.text)}}
+{{form_widget(form.text,  {'attr': {'class': 'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p-2 mt-1 mb-2'}})}}
 </div>
 <div>
-  <button type="submit">Save!</button>
+  <button  type="submit" class="block w-full shadow-sm border-transparent bg-indigo-600 hover:bg-indigo-700 dark:bg-indigo-500 dark:hover:bg-indigo-400 text-white rounded-md border p-2 mt-4 mb-2">Save!</button>
 </div>
 
 {{ form_end(form) }}
