--- a/templates/micro_post/_post.html.twig
+++ b/templates/micro_post/_post.html.twig
@@ -24,8 +24,9 @@
   <div class="text-sm text-gray-500 dark:text-gray-400">
     <a href="{{ path('app_profile', { id: post.author.id }) }}">{{ post.author.email }}</a>
   </div>
-  <div class="flex">
+ #}
+   <div class="flex">
     <a href="{{ path('app_micro_post_edit', { post: post.id }) }}" class="mr-2">Edit</a>
     <a href="{{ path('app_micro_post_comment', { post: post.id }) }}">Comment <span class="px-2 rounded-md bg-gray-200 dark:bg-gray-700">{{post.comments.count}}</span></a>
-  </div> #}
+  </div>
 </div>
