--- a/templates/micro_post/showOne.html.twig
+++ b/templates/micro_post/showOne.html.twig
@@ -1,13 +1,53 @@
-{% extends "base.html.twig" %}
-{% block title %}Post-{{post.title}}{% endblock %}
-{% block body %}
-<div>
-<h2>{{ post.title }}</h2>
-<p>{{post.text}}</p>
-  {% if date(post.created)< date('-1year')%}
-    older that 1 year
-    {% else %}
-      {{post.created|date('d/m/Y')}}
-  {% endif %}
-</div>
+{% extends 'base.html.twig' %}
+
+{% block title %}Post - {{post.title}}{% endblock %}
+
+{% block bread %}
+→ Post
 {% endblock %}
+
+{% block body %}
+  {# <div class="flex items-center mb-4">
+    <div>
+      {{ include('shared/_avatar.html.twig', { profile: post.author.userProfile, size: 16 }) }}
+    </div>
+    <div class="ml-4">
+      <div class="text-xl">
+        {{ post.author.userProfile.name ?? post.author.email }}
+      </div>
+      <div class="text-sm text-gray-500 dark:text-gray-400">
+        <a href="{{ path('app_profile', { id: post.author.id }) }}">
+          {{ post.author.email }}
+        </a>
+      </div>
+    </div>
+  </div> #}
+
+  {{ include('micro_post/_post.html.twig', {post: post}) }}
+   <div class="mt-4">
+  {% for comment in post.comments %}
+    <div>
+      <div class="flex items-center">
+        <div class="mr-2">
+          {# {{ include('shared/_avatar.html.twig', { profile: comment.author.userProfile, size: 8 }) }} #}
+        </div>
+        <div>
+          <div class="font-medium text-gray-800 dark:text-gray-300">
+            {# <a href="{{ path('app_profile', { id: comment.author.id }) }}">
+              {{ comment.author.email }}
+            </a> #}
+            author
+          </div>
+          <div class="font-light text-gray-500 dark:text-gray-500">when</div>
+        </div>
+      </div>
+      <div class="flex">
+        <div class="border ml-4 mr-6 pb-12 {% if not loop.last %}border-gray-300 dark:border-gray-600{% else %}border-transparent{% endif %}"></div>
+        <div>{{ comment.text }}</div>
+      </div>
+    </div>
+  {% endfor %}
+  </div>
+
+
+  {% endblock %}
