Create login controller

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,21 +34,13 @@
                 <div class="text-sm text-gray-500 dark:text-gray-400 flex">
                     
                     <div>
-                        Add New
+                        <a href="{{ path('app_micro_post_add') }}">Add New</a>
                     </div>
-                    <div class="ml-2">
-                        Profile Settings
-                    </div>
-                    <div class="ml-2">
-                        Logout
+
+                     <div>
+                        <a href="{{ path('app_login') }}">Login</a>
                     </div>
                     
-                    <div>
-                        Login
-                    </div>
-                    <div class="ml-2">
-                        Register
-                    </div>
                     
                 </div>
             </div>
