--- a/templates/micro_post/showOne.html.twig
+++ b/templates/micro_post/showOne.html.twig
@@ -36,9 +36,9 @@
             {# <a href="{{ path('app_profile', { id: comment.author.id }) }}">
               {{ comment.author.email }}
             </a> #}
-            author
+            {{ comment.author.email }}
           </div>
-          <div class="font-light text-gray-500 dark:text-gray-500">when</div>
+          <div class="font-light text-gray-500 dark:text-gray-500">{{comment.created | date("M j, Y")}}</div>
         </div>
       </div>
       <div class="flex">
