--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,16 +32,19 @@
 
             <div class="text-right">
                 <div class="text-sm text-gray-500 dark:text-gray-400 flex">
-                    
+                  {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                     <div>
-                        <a href="{{ path('app_micro_post_add') }}">Add New</a>
+                      <a href="{{ path('app_micro_post_add') }}">Add New</a>                   
+                    </div> 
+                    <div class="ml-2">
+                        <a href="{{ path('app_logout') }}">Logout</a>
+                    </div>               
+                  {% else %}
+                    <div>
+                      <a href="{{ path('app_login') }}">Login</a>
                     </div>
-
-                     <div>
-                        <a href="{{ path('app_login') }}">Login</a>
-                    </div>
-                    
-                    
+                  {% endif %}
+                        
                 </div>
             </div>
         </div>
